--- a/package.json
+++ b/package.json
@@ -20,6 +20,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.299.0",
+    "bcrypt": "^5.1.0",
+    "cron": "^2.3.0",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "email-templates": "^11.0.3",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "handlebars": "^4.7.7",
+    "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "4.1",
+    "mongoose": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -27,7 +46,30 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@nestjs/core": "^9.3.12",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/jwt": "^10.0.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^2.0.1",
+    "@types/email-templates": "^10.0.1",
+    "@types/multer": "^1.4.7",
+    "@types/express-fileupload": "^1.4.1",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/nodemailer": "^6.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.1",
+    "class-validator": "^0.14.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
+    "nodemon": "^2.0.21",
+    "prisma": "^4.12.0",
+    "rimraf": "^4.2.0",
+    "tsc-watch": "^6.0.0",
     "@nestjs/cli": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "^4.12.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
