--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -21,6 +20,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.299.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "bcrypt": "^5.1.0",
     "cron": "^2.3.0",
     "dayjs": "^1.11.7",
@@ -39,55 +41,53 @@
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/core": "^9.3.12",
-    "@nestjs/platform-express": "^9.4.0",
-    "@nestjs/passport": "^9.0.3",
     "@nestjs/jwt": "^10.0.3",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/testing": "^9.0.0",
+    "@prisma/client": "^4.12.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^2.0.1",
     "@types/email-templates": "^10.0.1",
-    "@types/multer": "^1.4.7",
+    "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.4.1",
+    "@types/jest": "29.5.1",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
+    "@types/node": "18.16.12",
     "@types/nodemailer": "^6.4.7",
+    "@types/passport-local": "^1.0.35",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.1",
-    "class-validator": "^0.14.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.3",
-    "nodemon": "^2.0.21",
-    "prisma": "^4.12.0",
-    "rimraf": "^4.2.0",
-    "tsc-watch": "^6.0.0",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/swagger": "^6.3.0",
-    "@prisma/client": "^4.12.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "29.5.1",
-    "@types/node": "18.16.12",
-    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "class-validator": "^0.14.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
     "jest": "29.5.0",
-    "prettier": "^2.3.2",
+    "nodemon": "^2.0.21",
+    "prettier": "^2.8.8",
+    "prisma": "^4.12.0",
+    "rimraf": "^4.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "tsc-watch": "^6.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.0.0"
   },
