--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/nodemailer": "^6.4.7",
+    "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
