--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/testing": "^9.0.0",
     "@prisma/client": "^4.14.1",
+    "permissions.js": "^1.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^2.0.1",
     "@types/email-templates": "^10.0.1",
